# persona-core

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/persona_core/: __init__.py  bootstrap.py  context.py  embedding.py  export.py  fatigue.py  generation.py  inventory.py  parser.py  qdrant_store.py  records.py  retrieval.py  scenario.py  schema.py  scoring.py  serialization.py  state.py  store_client.py  triggering.py
tests/fixtures/: inventory_blanks_persona.md  minimal_persona.md
tests/persona_core/: test_bootstrap.py  test_context.py  test_embedding.py  test_export.py  test_fatigue.py  test_generation.py  test_inventory.py  test_parser.py  test_parser_intimate_paths.py  test_qdrant_store.py  test_records.py  test_retrieval.py  test_scenario.py  test_schema.py  test_scoring.py  test_state.py  test_store_client.py  test_triggering.py
