[project]
name = "persona-core"
version = "1.0.0"
description = "Shared data-model + storage kernel for the persona runtime and authoring services (frozen cold-path surface)."
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }
dependencies = [
  "python-frontmatter>=1.1",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "qdrant-client>=1.12,<2",
  "ollama>=0.3,<1",
]

[tool.poetry]
packages = [{ include = "persona_core", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
respx = ">=0.21"
ruff = ">=0.6"
black = ">=24.0"
bandit = ">=1.7"
pip-audit = ">=2.7"
# Transitive via pip-audit -> cachecontrol; floor avoids GHSA-6v7p-g79w-8964.
msgpack = ">=1.2.1"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
